# OmicsAgent

./: .gitignore  .lintr  README.md  demo.html  main.py  pyproject.toml  test_auth_debug.html  test_avatar_upload.py
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agent/: __init__.py  core.py  error_recovery.py  models.py  prompts.py  rag.py
backend/app/api/: comments.py  deps.py
backend/app/api/v1/: admin.py  analysis.py  auth.py  blog.py  categories.py  chat.py  cloud_disk.py  comments.py  conversation.py  follow.py  image.py  interactions.py  llm.py  statistics.py  tags.py  users.py  visual.py
backend/app/core/: celery_app.py  config.py  logging.py  security.py
backend/app/db/: base.py  factory.py  session.py  sync_base.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 181d92eb2f3b_add_comments_enabled_field_to_blog_posts.py  40124169be94_add_image_support_and_refactor_to_.py  46a6a4500483_add_email_verification_table.py  521592ac2c95_fix_user_table_structure.py  (+10 more)
backend/app/middleware/: logging_middleware.py
backend/app/models/: __init__.py  blog.py  category.py  comment.py  conversation.py  email_verification.py  image_library.py  tag.py  user.py  visual.py
backend/app/orchestration/: __init__.py  chat.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  avatar.py  blog.py  category.py  comments.py  conversation.py  email_verification.py  follow.py  image.py  interactions.py  statistics.py  tag.py  visual.py
backend/app/services/: __init__.py  admin.py  analysis.py  background_image.py  blog.py  category.py  cloud_disk.py  comment.py  conversation.py  email.py  email_verification.py  follow.py  image.py  interaction.py  statistics.py  tag.py  visual.py
backend/app/tasks/: __init__.py
backend/app/utils/: file_upload.py  llm_factory.py  query_helpers.py
backend/docs/: chart_system_update.md  configuration_example.md  data_path_configuration.md  manual_model_download.md  message_persistence.md  storage_restructure.md  storage_restructure_updated.md
backend/scripts/: download_rag_model.py
backend/scripts/analysis/epigenetics/: meta.json
backend/scripts/analysis/genomics/: meta.json
backend/scripts/analysis/metabolomics/: meta.json
backend/scripts/analysis/metagenomics/: meta.json
backend/scripts/analysis/multiomics/: meta.json
backend/scripts/analysis/proteomics/: meta.json
backend/scripts/utils/: build_ggplot.R  build_heatmap.R  plot_ggplot2.R  utils.R
backend/scripts/visual/scatter/: meta.json  run.R
backend/static/chat_files/1/: bc43d369-affd-4968-b4d7-2f21b0900860.json
backend/tests/visual/: ENHANCED_TABLE_DYNAMIC_FEATURES.md  test_api_route_fix.py
(+629 files in other folders)
