[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.11.9",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.0.0",
    "argon2-cffi>=25.1.0",
    "pypinyin>=0.55.0",
    "greenlet>=3.2.4",
    "celery>=5.3.0",
    "redis>=4.5.0",
]
