[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.11.9",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.0.0",
    "argon2-cffi>=25.1.0",
    "pypinyin>=0.55.0",
    "greenlet>=3.2.4",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "matplotlib>=3.10.7",
    "pyarrow>=22.0.0",
    "duckdb>=1.4.1",
    "scipy>=1.16.3",
    "lifelines>=0.30.0",
    "aiofile>=3.9.0",
    "orjson>=3.11.4",
    "langgraph>=1.0.5",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.0.1",
    "langchain-anthropic>=1.3.0",
    "langchain-aws>=1.2.0",
    "langchain-community>=0.3.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-faiss>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "faiss-cpu>=1.7.4",
    "serpapi>=0.1.5",
    "tavily-python>=0.7.17",
]
